src/emit/snapshots/hebi__emit__tests__class_with_field_and_closure_method.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
u := 0
class T:
  v = 0
  fn test(self):
    print self.v, u


# Func:
function `T.test` (registers: 2, length: 14, constants: 2)
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r0
  5  | load_global [1]; u
  7  | store r1
  9  | print_n r0 2
  12 | load_none
  13 | return



function `main` (registers: 1, length: 14, constants: 3)
.code
  0  | load_smi 0
  2  | store_global [0]; u
  4  | load_smi 0
  6  | store r0
  8  | make_class [1] r0; <class `T` descriptor>
  11 | store_global [2]; T
  13 | return




