src/emit/snapshots/hebi__emit__tests__class_with_field_and_method.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0
  fn test(self):
    print self.v


# Func:
function `T.test` (registers: 1, length: 6, constants: 1)
.code
  0 | load_self
  1 | load_field [0]; v
  3 | print
  4 | load_none
  5 | return



function `main` (registers: 1, length: 10, constants: 2)
.code
  0  | load_smi 0
  2  | store r0
  4  | make_class [0] r0; <class `T` descriptor>
  7  | store_global [1]; T
  9  | return




