src/emit/snapshots/hebi__emit__tests__conditional_exprs.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
fn test0(a, b):
  a && b
fn test1(a, b):
  a || b
fn test2(a, b):
  a ?? b


# Func:
function `test0` (registers: 3, length: 8, constants: 1)
.code
  0 | load r1
  2 | jump_if_false 4
  4 | load r2
  6 | load_none
  7 | return



function `test1` (registers: 3, length: 10, constants: 2)
.code
  0  | load r1
  2  | jump_if_false 4
  4  | jump 4
  6  | load r2
  8  | load_none
  9  | return



function `test2` (registers: 4, length: 15, constants: 2)
.code
  0  | load r1
  2  | store r3
  4  | is_none
  5  | jump_if_false 6
  7  | load r2
  9  | jump 4
  11 | load r3
  13 | load_none
  14 | return



function `main` (registers: 1, length: 13, constants: 6)
.code
  0  | make_fn [0]; <function `test0` descriptor>
  2  | store_global [1]; test0
  4  | make_fn [2]; <function `test1` descriptor>
  6  | store_global [3]; test1
  8  | make_fn [4]; <function `test2` descriptor>
  10 | store_global [5]; test2
  12 | return




