src/emit/snapshots/hebi__emit__tests__empty_class.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
class T: pass


# Func:
function `main` (registers: 0, length: 5, constants: 2)
.code
  0 | make_class_empty [0]; <class `T` descriptor>
  2 | store_global [1]; T
  4 | return




